Little map adjustments

--- a/localization/english/titles_l_english.yml
+++ b/localization/english/titles_l_english.yml
@@ -23861,6 +23861,8 @@
  d_bonnia_adj: "Bonnian"
  d_virinum: "Virinum"
  d_virinum_adj: "Virinumian"
+ d_noricum: "Noricum"
+ dnoricum_adj: "Norician"
  d_suebia: "Suebia"
  d_suebia_adj: "Suebian"
  d_frisia: "Frisia"
@@ -24072,6 +24074,8 @@
  d_peithon_adj: "Peithonian"
  k_aksum: "Aksum"
  k_aksum_adj: "Aksumite"
+ k_kush: "Kush"
+ k_kush_adj: "Kushite"
  d_aksum: "Aksum"
  d_aksum_adj: "Aksumite"
  d_kush: "Kush"
@@ -24082,8 +24086,8 @@
  d_damot_adj: "Damot"
  e_kemet: "Kemet"
  e_kemet_adj: "Kemetic"
- e_aksum: "Aksum"
- e_aksum_adj: "Aksumite"
+ e_aksum: "Kush"
+ e_aksum_adj: "Kushite"
  e_arabia: "Arabia"
  e_arabia_adj: "Arabian"
  k_arabia_felix: "Arabia Felix"
