--- a/localization/english/culture/cultures_l_english.yml
+++ b/localization/english/culture/cultures_l_english.yml
@@ -67,9 +67,9 @@
  celtiberian: "Celtiberian"
  celtiberian_prefix: "Celtiberian"
  celtiberians_collective_noun: "Celtiberians"
- galleacian: "Galleacian"
- galleacian_prefix: "Galleacian"
- galleacian_collective_noun: "Galleacians"
+ gallaecian: "Gallaecian"
+ gallaecian_prefix: "Gallaecian"
+ gallaecian_collective_noun: "Gallaecians"
 
  #germanic
  germanic: "Germanic"
