--- a/localization/english/culture/traditions/cultural_languages_l_english.yml
+++ b/localization/english/culture/traditions/cultural_languages_l_english.yml
@@ -15,7 +15,7 @@
  language_pictish_name: "Pictish"
  language_gaelic_name: "Gaelic"
  language_celtiberian_name: "Celtiberian"
- language_galleacian_name: "Galleacian"
+ language_gallaecian_name: "gallaecian"
  language_germanic_name: "Germanic"
  language_slavic_name: "Slavic"
  language_iranian_name: "Iranian"
