progress on provinces history

--- a/localization/english/culture/cultures_l_english.yml
+++ b/localization/english/culture/cultures_l_english.yml
@@ -34,6 +34,9 @@
  masselian: "Masselian"
  masselian_prefix: "Masselic"
  masselian_collective_noun: "Masselians"
+ baktrian: "Baktrian"
+ baktrian_prefix: "Baktrian"
+ baktrian_collective_noun: "Baktrians"
  
  #african
  nubian: "Nubian"
