duplicated titles fix

--- a/localization/english/titles_l_english.yml
+++ b/localization/english/titles_l_english.yml
@@ -1716,7 +1716,6 @@
  b_bray: "Bray"
  b_brdo: "Brdo"
  b_breclav: "Břeclav"
- b_brecon:1 "Aberhonddu"
  b_breda: "Breda"
  b_bredevoort: "Bredevoort"
  b_bregenz: "Bregenz"
@@ -1968,7 +1967,6 @@
  b_carrick: "Carrick"
  b_carrickfergus: "Carrickfergus"
  b_carrion: "Carrión"
- b_cartagena: "Cartagena"
  b_cartaghe: "Carthage"
  b_cartajima: "Cartajima"
  b_cartmel: "Cartmel"
@@ -10491,7 +10489,6 @@
  b_vetlanda: "Vetlanda"
  b_vetulonia: "Vetulonia"
  b_veurne: "Veurne"
- b_vezelay: "Vézelay"
  b_vhrbosna:1 "Vrhbosna"
  b_viadana: "Viadana"
  b_vianadoalento:1 "Viana do Alentejo"
@@ -14515,8 +14512,6 @@
  d_akara_dasarna: "Akara-Dasarna"
  d_alan_band: "Alan Riders"
  d_alan_band_adj: "Alan"
- d_alania: "Alania"
- d_alania_adj: "Alanian"
  d_albany: "Albany"
  d_albany_adj: "Albanite"
  d_aleppo: "Aleppo"
@@ -14558,8 +14553,6 @@
  d_argyll_adj: "Argyllan"
  d_armagnac: "Armagnac"
  d_armagnac_adj: "Armagnac"
- d_armenia: "Armenia"
- d_armenia_adj: "Armenian"
  d_armenia_minor: "Cilicia"
  d_armenia_minor_adj: "Cilician"
  d_armenia_minor_adj_armenian: "Armenian"
@@ -14765,8 +14758,6 @@
  d_dalmatia_adj: "Dalmatian"
  d_damietta: "Damietta"
  d_damietta_adj: "Damiettan"
- d_damot: "Damot"
- d_damot_adj: "Damot"
  d_dandakaranya: "Dandakaranya"
  d_danes: "Danmark"
  d_danes_adj: "Danish"
@@ -14839,8 +14830,6 @@
  d_followers_arjuna_adj: "Arjuna"
  d_franconia: "Franconia"
  d_franconia_adj: "Franconian"
- d_frisia: "Frisia"
- d_frisia_adj: "Frisian"
  d_frisian_navy: "North Sea Cogs"
  d_frisian_navy_adj: "North Sea"
  d_friuli: "Friuli"
@@ -15144,8 +15133,6 @@
  d_meryas_adj: "Meryan"
  d_meshcheras: "Meshcheras"
  d_meshcheras_adj: "Meshcheran"
- d_mesopotamia: "Mesopotamia"
- d_mesopotamia_adj: "Mesopotamian"
  d_milano: "Milano"
  d_milano_adj: "Milanese"
  d_minsk: "Minsk"
@@ -15191,8 +15178,6 @@
  d_nefoud_adj: "Nefoudi"
  d_nikaea: "Nikaea"
  d_nikaea_adj: "Nikaean"
- d_nikomedeia: "Bithynia"
- d_nikomedeia_adj: "Bithynian"
  d_nishapur: "Nishapur"
  d_nishapur_adj: "Nishapuri"
  d_nobatia: "Nobatia"
@@ -15492,8 +15477,6 @@
  d_swiss_company_adj: "Swiss"
  d_syr_darya: "Syr Darya"
  d_syr_darya_adj: "Syr Daryan"
- d_syria: "Syria"
- d_syria_adj: "Syrian"
  d_syrmia: "Syrmia"
  d_syrte: "Syrte"
  d_syrte_adj: "Syrtenian"
@@ -15546,8 +15529,6 @@
  d_transylvania_adj: "Transylvanian"
  d_transylvanian_alps: "Transylvanian Alps"
  d_transylvanian_alps_adj: "Subcarpathian"
- d_trapezous: "Trapezous"
- d_trapezous_adj: "Trapezian"
  d_trebizond: "Trebizond"
  d_trebizond_adj: "Trebizondian"
  d_tripoli: "Tripoli"
@@ -15568,8 +15549,6 @@
  d_turkic_company_adj: "Turkic"
  d_turkmens: "Turkmens"
  d_turkmens_adj: "Turkmen"
- d_turnovo: "Moesia"
- d_turnovo_adj: "Moesian"
  d_turov: "Turov"
  d_turov_adj: "Turovian"
  d_tver: "Tver"
@@ -15775,8 +15754,6 @@
  e_roman_empire: "Roman Empire"
  e_roman_empire_adj: "Roman"
  e_roman_empire_pre: "Romano"
- e_slavia: "Slavia"
- e_slavia_adj: "Slavian"
  e_slavia_pre: "Slavo"
  e_russia: "Russia"
  e_russia_adj: "Russian"
@@ -16033,8 +16010,6 @@
  k_pechenegs_adj: "Pecheneg"
  k_perm: "Perm"
  k_perm_adj: "Permian"
- k_persia: "Persia"
- k_persia_adj: "Persian"
  k_pisa: "Pisa"
  k_pisa_adj: "Pisan"
  k_sorbia: "Sorbia"
@@ -17366,8 +17341,6 @@
  d_bucellaria_adj: "Bucellarian"
  d_cilicia: "Cilicia"
  d_cilicia_adj: "Cilician"
- d_cappadocia: "Cappadocia"
- d_cappadocia_adj: "Cappadocian"
  d_armeniac: "Armeniac"
  d_armeniac_adj: "Armeniac"
  d_sebasteia: "Sebasteia"
@@ -18054,7 +18027,6 @@
  b_unayza: "Unayza"
  b_usfain: "Usfan"
  b_uwal: "Uwal"
- b_vajdahunyad: "Vajdahunyad"
  b_varanno: "Varanno"
  b_vasarhely: "Vásárhely"
  b_veszprem: "Veszprém"
@@ -22561,8 +22533,6 @@
  d_adal_adj:1 "Adali"
  d_adiukru: "Adiukru"
  d_adiukru_adj: "Adiukruan"
- d_aksum: "Aksum"
- d_aksum_adj: "Aksumite"
  d_ashanti: "Ashanti"
  d_ashanti_adj: "Ashantian"
  d_baguirmi: "Baguirmi"
@@ -23906,7 +23876,6 @@
  d_thessalonika_adj: "Thessalonian"
  c_thessalonika: "Pella"
  c_thessalonika_adj: "Pellan"
- c_thessalonika_adj: "Pellan"
  b_thessaloniki: "Pella"
  b_thessaloniki_adj: "Pellan"
  k_asia_minor: "Asia Minor"
@@ -23963,8 +23932,8 @@
  c_aeolis_adj: "Pergamonian"
  d_antigonos: "Antigonos"
  d_antigonos_adj: "Antigonid"
- d_nikomedeia: "Nikomedeia"
- d_nikomedeia_adj: "Nikomedeian"
+ d_nikomedeia: "Bithynia"
+ d_nikomedeia_adj: "Bithynian"
  d_arkesilas: "Arkesilas"
  d_arkesilas_adj: "Arkesilasian"
  d_peithon: "Peithon"
@@ -24012,9 +23981,9 @@
  k_dacia_superior: "Dacia"
  k_dacia_superior_adj: "Dacian"
  d_dacia_inferior: "Dacia Inferior"
- d_dacia_adj: "Dacian"
+ d_dacia_inferior_adj: "Dacian"
  d_dacia_superior: "Dacia Superior"
- d_dacia_adj: "Dacian"
+ d_dacia_superior_adj: "Dacian"
  d_roxolania: "Roxolania"
  d_roxolania_adj: "Roxolanian"
  k_dacia_inferior: "Iazygia"
@@ -24450,13 +24419,13 @@
  c_gloucestershire: "Glevun"
  c_gloucestershire_adj: "Glevunian"
  b_casnewydd: "Isca Silurum"
- cn_caerleon: "Caerleon" 
+ # cn_caerleon: "Caerleon" 
  cn_caerleon_adj: "Caerleonian"
  c_monmouthshire: "Silurum"
  c_monmouthshire_adj: "Silurumian"
  b_neath: "Nidum"
  b_carmarthen: "Maridunum"
- cn_carmarthen: "Caerfyrddin"
+ # cn_carmarthen: "Caerfyrddin"
  cn_carmarthen_adj: "Caerfyrddinsh"
  c_carmarthenshire: "Maridunum"
  c_carmarthenshire_adj: "Maridunumian"
