--- a/localization/english/dynastic_guis_l_english.yml
+++ b/localization/english/dynastic_guis_l_english.yml
@@ -13,3 +13,12 @@
  value_citizens_NOT_revolt: "[FixedPointToInt( GetPlayer.MakeScope.Var('citizens_h_amount').GetValue )]%"
  d_happiness: "Happiness:"
  d_happiness_revolt: "#bold Happiness:#!"
+ army_liege_happiness_tooltip: "#T Happiness Value:#!\n[GetPlayer.GetLiege.Custom('HappinessArmyValueColorLiege')]"
+ nobles_liege_happiness_tooltip: "#T Happiness Value:#!\n[GetPlayer.GetLiege.Custom('HappinessNoblesValueColorLiege')]"
+ citizens_liege_happiness_tooltip: "#T Happiness Value:#!\n[GetPlayer.GetLiege.Custom('HappinessCitizensValueColorLiege')]"
+ value_army_revolt_LIEGE: "#N #bold [FixedPointToInt( GetPlayer.GetLiege.MakeScope.Var('army_h_amount').GetValue )]%#!#!"
+ value_nobles_revolt_LIEGE: "#N #bold [FixedPointToInt( GetPlayer.GetLiege.MakeScope.Var('nobles_h_amount').GetValue )]%#!#!"
+ value_citizens_revolt_LIEGE: "#N #bold [FixedPointToInt( GetPlayer.GetLiege.MakeScope.Var('citizens_h_amount').GetValue )]%#!#!"
+ value_army_NOT_revolt_LIEGE: "[FixedPointToInt( GetPlayer.GetLiege.MakeScope.Var('army_h_amount').GetValue )]%"
+ value_nobles_NOT_revolt_LIEGE: "[FixedPointToInt( GetPlayer.GetLiege.MakeScope.Var('nobles_h_amount').GetValue )]%"
+ value_citizens_NOT_revolt_LIEGE: "[FixedPointToInt( GetPlayer.GetLiege.MakeScope.Var('citizens_h_amount').GetValue )]%"
