Culture Rework for Germanic, Gallia

--- a/localization/english/culture/cultures_l_english.yml
+++ b/localization/english/culture/cultures_l_english.yml
@@ -14,6 +14,9 @@
  umbrian: "Umbrian"
  umbrian_prefix: "Umbrian"
  umbrian_collective_noun: "Umbrians"
+ venetii: "Transpadanian"
+ venetii_prefix: "Transpadanian"
+ venetii_collective_noun: "transpadania"
  
  #hellenic
  greek: "Greek"
@@ -53,12 +56,30 @@
  iberian: "Iberian"
  iberian_prefix: "Iberian"
  iberian_collective_noun: "Iberians"
+ pax_basque: "Basque"
+ pax_basque_prefix: "Basque"
+ pax_basque_collective_noun: "Basques"
 
  #celtic
  gallic: "Gallic"
  gallic_prefix: "Gallic"
  gallic_collective_noun: "Gauls"
- brythonic: "Brythonic"
+ gallic_alpina: "Gallic Alpina"
+ gallic_alpina_prefix: "Gallic Alpina"
+ gallic_alpina_collective_noun: "Alpinas"
+ gallic_narbonensis: "Gallic Narbonensis"
+ gallic_narbonensis_prefix: "Gallic Narbonensis"
+ gallic_narbonensis_collective_noun: "Narbonense"
+ gallic_belgica: "Gallic Belgica"
+ gallic_belgica_prefix: "Gallic Belgica"
+ gallic_belgica_collective_noun: "Belgian"
+ gallic_comato: "Gallic Comato"
+ gallic_comato_prefix: "Gallic Comato"
+ gallic_comato_collective_noun: "Comatos"
+ gallic_veneti: "Aremorican"
+ gallic_veneti_prefix: "Aremorican"
+ gallic_veneti_collective_noun: "Aremoricans"
+ brythonic: "Celtic Brythonic"
  brythonic_prefix: "Brythonic"
  brythonic_collective_noun: "Brythons"
  pictish: "Pictish"
@@ -81,6 +102,21 @@
  finnish: "Finnish"
  finnish_prefix: "Finnish"
  finnish_collective_noun: "Fins"
+ north_sea_germans: "North Sea Germans"
+ north_sea_germans_prefix: "north_sea_germans Germans"
+ north_sea_germans_collective_noun: "Germans"
+ weser_germans: "Weser Germans"
+ weser_germans_prefix: "Weser Germans"
+ weser_germans_collective_noun: "Germans"
+ elbe_germans: "Elbe Germans"
+ elbe_germans_prefix: "Elbe Germans"
+ elbe_germans_collective_noun: "Germans"
+ oder_vistula_germans: "Oder Vistula Germans"
+ oder_vistula_germans_prefix: "Oder Vistula Germans"
+ oder_vistula_germans_collective_noun: "Germans"
+ south_germans: "South Germans"
+ south_germans_prefix: "South Germans"
+ south_germans_collective_noun: "Germans"
  
  #slavic
  slavic: "Slavic"
