--- a/localization/english/culture/cultures_l_english.yml
+++ b/localization/english/culture/cultures_l_english.yml
@@ -94,29 +94,43 @@
  gallaecian: "Gallaecian"
  gallaecian_prefix: "Gallaecian"
  gallaecian_collective_noun: "Gallaecians"
+ south_germans: "Hallstatt Celts"
+ south_germans_prefix: "Hallstatt Celts"
+ south_germans_collective_noun: "Hallstatt Celts"
+ boier: "Celtica Boiaria"
+ boier_prefix: "Celtica Boiaria"
+ boier_collective_noun: "Celtica Boiarias"
 
  #germanic
  germanic: "Germanic"
  germanic_prefix: "Germanic"
  germanic_collective_noun: "Germans"
+ north_sea_germans: "North Sea Germanic"
+ north_sea_germans_prefix: "north_sea_germans Germanic"
+ north_sea_germans_collective_noun: "Germans"
+ weser_germans: "Weser Germanic"
+ weser_germans_prefix: "Weser Germanic"
+ weser_germans_collective_noun: "Germans"
+ elbe_germans: "Elbe Germanic"
+ elbe_germans_prefix: "Elbe Germanic"
+ elbe_germans_collective_noun: "Germans"
+ oder_vistula_germans: "Oder Vistula Germanic"
+ oder_vistula_germans_prefix: "Oder Vistula Germanic"
+ oder_vistula_germans_collective_noun: "Germans"
+ north_germans: "North Germanic"
+ north_germans_prefix: "North Germanic"
+ north_germans_collective_noun: "Germans"
+
+ #Baltic
  finnish: "Finnish"
  finnish_prefix: "Finnish"
  finnish_collective_noun: "Fins"
- north_sea_germans: "North Sea Germans"
- north_sea_germans_prefix: "north_sea_germans Germans"
- north_sea_germans_collective_noun: "Germans"
- weser_germans: "Weser Germans"
- weser_germans_prefix: "Weser Germans"
- weser_germans_collective_noun: "Germans"
- elbe_germans: "Elbe Germans"
- elbe_germans_prefix: "Elbe Germans"
- elbe_germans_collective_noun: "Germans"
- oder_vistula_germans: "Oder Vistula Germans"
- oder_vistula_germans_prefix: "Oder Vistula Germans"
- oder_vistula_germans_collective_noun: "Germans"
- south_germans: "South Germans"
- south_germans_prefix: "South Germans"
- south_germans_collective_noun: "Germans"
+ przeworsk: "Przeworsk"
+ przeworsk_prefix: "Przeworsk"
+ przeworsk_collective_noun: "Przeworsks"
+ zarubintsy: "Zarubintsy"
+ zarubintsy_prefix: "Zarubintsy"
+ zarubintsy_collective_noun: "Zarubintsys"
  
  #slavic
  slavic: "Slavic"
@@ -152,6 +166,9 @@
  dacian: "Dacian"
  dacian_prefix: "Dacian"
  dacian_collective_noun: "Dacians"
+ thracian: "Thracian"
+ thracian_prefix: "Thracian"
+ thracian_collective_noun: "Thracians"
  
  #italian insular
  sardinian: "Sardinian"
@@ -160,3 +177,11 @@
  corsican: "Corsican"
  corsican_prefix: "Corsican"
  corsican_collective_noun: "Corsicans"
+
+ #Siberia
+ ugrisch: "Ugrisch"
+ ugrisch_prefix: "Ugrisch"
+ ugrisch_collective_noun: "Ugria"
+ kasogier: "Kasogisch"
+ kasogier_prefix: "Kasogisch"
+ kasogier_collective_noun: "Kasogier"
