--- a/localization/english/culture/traditions/cultural_languages_l_english.yml
+++ b/localization/english/culture/traditions/cultural_languages_l_english.yml
@@ -31,3 +31,4 @@
  language_corsican_name: "Corsican"
  language_basque_name: "Euskara"
  language_israelite_name: "Hebrew"
+ language_thracian_name: "Thracian"
