--- a/localization/english/culture/traditions/cultural_heritages_l_english.yml
+++ b/localization/english/culture/traditions/cultural_heritages_l_english.yml
@@ -48,6 +48,8 @@
  heritage_scythian_collective_noun: "Scythians"
  heritage_siberia_name: "Siberia"
  heritage_siberia_collective_noun: "Siberians"
+ heritage_caucasian_name: "Caucasian"
+ heritage_caucasian_collective_noun: "Caucasian"
 
 #Vanilla Heritages
  heritage_generic_label_desc:0 "Each [heritage|E] defines a common origin for related [cultures|E]' customs and mannerisms, either as something they descend from or have wholesale adopted."
