--- a/localization/english/culture/traditions/cultural_languages_l_english.yml
+++ b/localization/english/culture/traditions/cultural_languages_l_english.yml
@@ -32,3 +32,8 @@
  language_basque_name: "Euskara"
  language_israelite_name: "Hebrew"
  language_thracian_name: "Thracian"
+ language_armenian_name: "Armenian"
+ language_parthian_name: "Parthian"
+ language_elamitisch_name: "Elamitisch"
+ language_lydian_name: "Lydisch"
+ language_kartvelian_name: "Kartvelisch"
