Some culture changes
- Ad Momed Culture
- Adjust some Traditions
- Add new Language

--- a/localization/english/culture/cultures_l_english.yml
+++ b/localization/english/culture/cultures_l_english.yml
@@ -161,6 +161,9 @@
  mauryan: "Mauryan"
  mauryan_prefix: "Mauryan"
  mauryan_collective_noun: "Mauryans"
+ meder: "Momed"
+ meder_prefix: "Momed"
+ meder_collective_noun: "Meder"
  persian: "Persian"
  persian_prefix: "Persian"
  persian_collective_noun: "Persians"
