--- a/localization/english/culture/traditions/cultural_languages_l_english.yml
+++ b/localization/english/culture/traditions/cultural_languages_l_english.yml
@@ -37,3 +37,4 @@
  language_elamitisch_name: "Elamitisch"
  language_lydian_name: "Lydisch"
  language_kartvelian_name: "Kartvelisch"
+ language_prakrit_name: "Prakrit"
