--- a/localization/english/titles_l_english.yml
+++ b/localization/english/titles_l_english.yml
@@ -14145,8 +14145,6 @@
  c_turov: "Turov"
  c_turov_adj: "Turovian"
  c_tus: "Tus"
- c_tustar: "Tustar"
- c_tustar_adj: "Tustari"
  c_tver: "Tver"
  c_tver_adj: "Tverian"
  c_tyana: "Tyana"
@@ -16298,7 +16296,6 @@
  b_andarab_d: "Andarab"
  b_sad_khaniya: "Sad Khaniya"
  b_sanda: "Sanda"
- b_as-sus: "as-Sus"
  b_kerend-kermanshah: "Kerend-Kermanshah"
  b_tazar: "Tazar"
  b_bisutun: "Bisutun"
@@ -23666,16 +23663,8 @@
  k_cisalpine_gaul_adj: "Transpadanian"
  e_gallia: "Gallia"
  e_gallia_adj: "Gaul"
- k_alpes: "Alpes"
- k_alpes_adj: "Alpinian"
  k_gallia_narbonense: "Gallia Narbonense"
  k_gallia_narbonense_adj: "Gaul"
- d_alpes_maritimae: "Alpes Maritimae"
- d_alpes_maritimae_adj: "Alpinian"
- d_alpes_cottidae: "Alpes Cottidae"
- d_alpes_cottidae_adj: "Alpinian"
- d_alpes_poeniae: "Alpes Poeniae"
- d_alpes_poeniae_adj: "Alpinian"
  d_narbonensis: "Narbonensis"
  d_narbonensis_adj: "Narbonensian"
  d_allobroges: "Allobroges"
@@ -23890,8 +23879,8 @@
  d_trapezous_adj: "Trapezian"
  d_armenia: "Armenia"
  d_armenia_adj: "Armenian"
- d_krateros: "Krateros"
- d_krateros_adj: "Kraterian"
+ d_krateros: "Cilicia"
+ d_krateros_adj: "Cilician"
  d_rodos: "Rodos"
  d_rodos_adj: "Rodian"
  d_cyprus: "Cyprus"
@@ -23902,18 +23891,18 @@
  d_damascus_adj: "Damascan"
  d_mesopotamia: "Mesopotamia"
  d_mesopotamia_adj: "Mesopotamian"
- d_antropatene: "Antropatene"
- d_antropatene_adj: "Antropatenian"
+ d_antropatene: "Media"
+ d_antropatene_adj: "Median"
  d_parthia: "Parthia"
  d_parthia_adj: "Parthian"
  d_baktria: "Baktria"
  d_baktria_adj: "Baktrian"
- d_peukestas: "Peukestas"
- d_peukestas_adj: "Peukestasian"
- d_tlepolemos: "Tlepolemos"
- d_tlepolemos_adj: "Tlepolemonian"
- d_strasanor: "Strasanor"
- d_strasanor_adj: "Strasanorian"
+ d_peukestas: "Persis"
+ d_peukestas_adj: "Persian"
+ d_tlepolemos: "Gedrosia"
+ d_tlepolemos_adj: "Gedrosian"
+ d_strasanor: "Arachosia"
+ d_strasanor_adj: "Arachosian"
  d_mauryas: "Mauryas"
  d_mauryas_adj: "Mauryan"
  k_aegyptus: "Aegyptus"
@@ -23930,12 +23919,12 @@
  b_phocaea_adj: "Pergamonian"
  c_aeolis: "Pergamon"
  c_aeolis_adj: "Pergamonian"
- d_antigonos: "Antigonos"
- d_antigonos_adj: "Antigonid"
+ d_antigonos: "Phrygia"
+ d_antigonos_adj: "Phrygian"
  d_nikomedeia: "Bithynia"
  d_nikomedeia_adj: "Bithynian"
- d_arkesilas: "Arkesilas"
- d_arkesilas_adj: "Arkesilasian"
+ d_arkesilas: "Assyria"
+ d_arkesilas_adj: "Assyrian"
  d_peithon: "Peithon"
  d_peithon_adj: "Peithonian"
  k_aksum: "Aksum"
@@ -23986,12 +23975,12 @@
  d_dacia_superior_adj: "Dacian"
  d_roxolania: "Roxolania"
  d_roxolania_adj: "Roxolanian"
- k_dacia_inferior: "Iazygia"
- k_dacia_inferior_adj: "Iazygian"
+ k_dacia_inferior: "Daesitiatias"
+ k_dacia_inferior_adj: "Daesetian"
  k_moesia: "Moesia"
  k_moesia_adj: "Moesian"
- d_iazyges: "Iazyges"
- d_iazyges_adj: "Iazygian"
+ d_iazyges: "Daesitiates"
+ d_iazyges_adj: "Daesetian"
  d_osia: "Osia"
  d_osia_adj: "Osian"
  e_western_sarmatae: "Western Sarmatae"
@@ -24028,38 +24017,36 @@
  d_aorsia_adj: "Aorsian"
  d_yuezhe: "Yuezhe"
  d_yuezhe_adj: "Yuezhian"
- e_slavia: "Slavia"
- e_slavia_adj: "Slavian"
- k_slavia_superior: "Slavia Superior"
- k_slavia_superior_adj: "Slavian"
+ e_slavia: "Warthia"
+ e_slavia_adj: "Warthian"
+ k_slavia_superior: "Warthia Superior"
+ k_slavia_superior_adj: "Warthian"
  d_quadia: "Quadia"
  d_quadia_adj: "Quadian"
  d_cotinia: "Cotinia"
  d_cotinia_adj: "Cotinian"
  d_vandalia: "Vandalia"
  d_vandalia_adj: "Vandalian"
- k_slavia_inferior: "Slavia Inferior"
- k_slavia_inferior_adj: "Slavian"
+ k_slavia_inferior: "Warthia Inferior"
+ k_slavia_inferior_adj: "Warthian"
  d_gothonia: "Gothonia"
  d_gothonia_adj: "Gothonian"
  d_aestia: "Aestia"
  d_aestia_adj: "Aestian"
  d_turnovo: "Moesia"
  d_turnovo_adj: "Moesian"
- e_fennia: "Fennia"
- e_fennia_adj: "Fennish"
- k_fennia_superior: "Fennia Superior"
- k_fennia_superior_adj: "Fennish"
+ e_fennia: "Ugrania"
+ e_fennia_adj: "Ugranish"
+ k_fennia_superior: "Ugrania Superior"
+ k_fennia_superior_adj: "Ugranish"
  d_ko-kun: "Ko-Kun"
  d_ko-kun_adj: "Ko-Kunnian"
  d_hsinia: "Hsinia"
  d_hsinia_adj: "Hsinian"
- k_fennia_inferior: "Fennia Inferior"
- k_fennia_inferior_adj: "Fennish"
+ k_fennia_inferior: "Ugrania Inferior"
+ k_fennia_inferior_adj: "Uranish"
  d_ugrania: "Ugrania"
  d_ugrania_adj: "Ugranish"
- d_samoya: "Samoya"
- d_samoya_Adj: "Samoyan"
  d_apulia: "Apulia"
  d_apulia_adj: "Apulian"
  d_calabria: "Lucania"
@@ -24677,3 +24664,30 @@
  c_barqa_adj: "Barcan"
  b_benghazi: "Euhesperides"
  cn_berenice: "Berenice"
+ c_tustar: "Susa"
+ c_tustar_adj: "Susa"
+ b_as-sus: "Susa"
+ cn_sus: "Sūš"
+ cn_shushan: "Shushān"
+ d_kasogischia: "Kasogischia"
+ d_kasogischia_adj: "Kasogischian"
+ d_samoya: "West Samoya"
+ d_samoya_Adj: "West Samoyan"
+ d_east_samoya: "East Samoya"
+ d_east_samoya_Adj: "East Samoyan"
+ d_alpes: "Alpes"
+ d_alpes_adj: "Alpinian"
+ d_bructeria: "Bructeria"
+ d_bructeria_adj: "Bructerian"
+ d_longobardia: "Longobardia"
+ d_longobardia_adj: "Longobard"
+ d_irminonia: "Irminonia"
+ d_irminonia_adj: "Irminonian"
+ d_avarpia: "Avarpa"
+ d_avarpia_adj: "Avarpian"
+ d_hasdingia: "Hasdingia"
+ d_hasdingia_adj: "Hasdingian"
+ d_eburonia: "Eburonia"
+ d_eburonia_adj: "Eburonian"
+ d_iapidia: "Iapidia"
+ d_iapidia_adj: "Iapidian"
