updated landed titles

--- a/localization/english/titles_l_english.yml
+++ b/localization/english/titles_l_english.yml
@@ -23909,8 +23909,8 @@
  k_aegyptus_adj: "Aegyptian"
  d_cyrene_et_creta: "Cyrene et Creta"
  d_cyrene_et_creta_adj: "Cyrenian and Cretian"
- d_alexandreia: "Alexandreia"
- d_alexandreia_adj: "Alexandreian"
+ d_alexandreia: "Lower Egypt"
+ d_alexandreia_adj: "Egyptian"
  d_thebes: "Upper Egypt"
  d_thebes_adj: "Egyptian"
  d_tyrus: "Tyrus"
@@ -24665,10 +24665,12 @@
  b_benghazi: "Euhesperides"
  cn_berenice: "Berenice"
  c_tustar: "Susa"
- c_tustar_adj: "Susa"
+ c_tustar_adj: "Susan"
  b_as-sus: "Susa"
  cn_sus: "Sūš"
+ cn_sus_adj: "Sūšn"
  cn_shushan: "Shushān"
+ cn_shushan_adj: "Shushān"
  d_kasogischia: "Kasogischia"
  d_kasogischia_adj: "Kasogischian"
  d_samoya: "West Samoya"
@@ -24691,3 +24693,7 @@
  d_eburonia_adj: "Eburonian"
  d_iapidia: "Iapidia"
  d_iapidia_adj: "Iapidian"
+ cn_alexandreia: "Alexandreia"
+ cn_alexandreia_adj: "Alexandreian"
+ cn_ptolemais: "Ptolemais"
+ cn_ptolemais_adj: "Ptolemaic"
