--- a/localization/english/culture/traditions/cultural_languages_l_english.yml
+++ b/localization/english/culture/traditions/cultural_languages_l_english.yml
@@ -38,3 +38,4 @@
  language_lydian_name: "Lydisch"
  language_kartvelian_name: "Kartvelisch"
  language_prakrit_name: "Prakrit"
+ language_lusitanisch_name: "Lusitianian"
