Culture and Faith changes
Rework Faith Map
Change some Tenets
Add Illyrian Celts
Overwrite some Vanilla Character Files
Change some Pax Character Files
Add Kasogisch Pagan Faith
Change some Faith and culture boarders
Change some culture Traditions

--- a/localization/english/religion/other_religions_l_english.yml
+++ b/localization/english/religion/other_religions_l_english.yml
@@ -12,6 +12,9 @@
 
  rf_steppe: "Steppe Religions"
  rf_steppe_adj: "Steppe"
+ kasogisch_pagan: "Permazonisch"
+ kasogisch_pagan_adj: "Permazonians"
+ kasogisch_pagan_desc: "$kasogisch_pagan$ were matrilineal religions who worshipped Womens, and ancestor spirits."
  sarmatian_religion: "Sarmatian Religions"
  sarmatian_religion_adj: "Sarmatian"
  scythian: "Scythianism"
