--- a/localization/english/culture/cultures_l_english.yml
+++ b/localization/english/culture/cultures_l_english.yml
@@ -76,6 +76,9 @@
  gallic: "Gallic"
  gallic_prefix: "Gallic"
  gallic_collective_noun: "Gauls"
+ gallic_illyrian: "Gallic Illyrian"
+ gallic_illyrian_prefix: "Gallic Illyrian"
+ gallic_illyrian_collective_noun: "Illyrian Gauls"
  gallic_alpina: "Gallic Alpina"
  gallic_alpina_prefix: "Gallic Alpina"
  gallic_alpina_collective_noun: "Alpinas"
@@ -84,7 +87,7 @@
  gallic_narbonensis_collective_noun: "Narbonense"
  gallic_belgica: "Gallic Belgica"
  gallic_belgica_prefix: "Gallic Belgica"
- gallic_belgica_collective_noun: "Belgian"
+ gallic_belgica_collective_noun: "Belgians"
  gallic_comato: "Gallic Comato"
  gallic_comato_prefix: "Gallic Comato"
  gallic_comato_collective_noun: "Comatos"
